# whisper-dictation

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.e2e  LICENSE  README.md  SECURITY.md  audio_control.py  cleaner.py  cli.py  commands.py  config.example.toml  config.py  config.toml  dictate  dictation.py  docker-compose.yml  history.py  hotkey.py  log.py  menu.py  menubar.py  overlay.py  paster.py  pyproject.toml  recorder.py  requirements.txt  transcriber.py  whisper-dic  whisper-dic.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
compat/: __init__.py  _macos.py  _windows.py
docs/: architecture.md  commands.md  configuration.md  development.md  local-setup.md  menubar.md  privacy.md  troubleshooting.md
scripts/: ci_pytest_retry.py  e2e-pr-smoke.sh  e2e-test.sh  smoke-test.sh
src/whisper_dic/: __init__.py  __main__.py  app_context.py  audio_control.py  cli.py  commands.py  config.example.toml  config.py  dictation.py  doctor.py  history.py  hotkey.py  local_setup.py  menu.py  menubar.py  overlay.py  paster.py  recorder.py  rewriter.py  transcriber.py
src/whisper_dic/compat/: __init__.py  _linux.py  _macos.py  _windows.py
tests/: conftest.py  test_app_context.py  test_audio_control.py  test_cleaner.py  test_cli.py  test_cli_runtime.py  test_commands.py  test_compat.py  test_compat_linux.py  test_config.py  test_dictation_context.py  test_doctor.py  test_history.py  test_hotkey.py  test_local_setup.py  test_log.py  test_menu.py  test_menubar.py  test_overlay.py  test_paster.py  test_recorder.py  test_rewriter.py  test_sleep_wake_recovery.py  test_streaming_preview.py  test_transcriber.py
tests/e2e/: test_audio.flac
