[project]
name = "whisper-dic"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.8.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "simple-term-menu>=1.6.0",
    "pyobjc-framework-Quartz>=10.0",
    "rumps>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "Quartz",
    "Quartz.*",
    "AppKit",
    "AppKit.*",
    "PyObjCTools",
    "PyObjCTools.*",
    "ApplicationServices",
    "ApplicationServices.*",
    "rumps",
    "rumps.*",
    "pynput",
    "pynput.*",
    "sounddevice",
    "sounddevice.*",
    "soundfile",
    "soundfile.*",
    "pyperclip",
    "pyperclip.*",
    "simple_term_menu",
    "simple_term_menu.*",
    "pychromecast",
    "pychromecast.*",
    "async_upnp_client",
    "async_upnp_client.*",
    "tomllib",
]
ignore_missing_imports = true
