[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-dic"
dynamic = ["version"]
requires-python = ">=3.12"
description = "System-wide hold-to-dictate for macOS, Windows, and Linux using Whisper"
license = {text = "MIT"}
authors = [{name = "Tim Romberg"}]
readme = "README.md"
keywords = [
    "whisper", "dictation", "speech-to-text", "voice-typing",
    "transcription", "accessibility", "macos", "windows", "linux",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pynput>=1.8.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Quartz>=10.0",
    "rumps>=0.4.0",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
whisper-dic = "whisper_dic.cli:main"

[project.urls]
Homepage = "https://github.com/timmeromberg/whisper-dic"
Repository = "https://github.com/timmeromberg/whisper-dic"
Issues = "https://github.com/timmeromberg/whisper-dic/issues"
Changelog = "https://github.com/timmeromberg/whisper-dic/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {file = "src/whisper_dic/VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whisper_dic = ["VERSION", "config.example.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "Quartz",
    "Quartz.*",
    "AppKit",
    "AppKit.*",
    "PyObjCTools",
    "PyObjCTools.*",
    "ApplicationServices",
    "ApplicationServices.*",
    "rumps",
    "rumps.*",
    "pynput",
    "pynput.*",
    "sounddevice",
    "sounddevice.*",
    "soundfile",
    "soundfile.*",
    "pyperclip",
    "pyperclip.*",
    "pychromecast",
    "pychromecast.*",
    "async_upnp_client",
    "async_upnp_client.*",
    "simple_term_menu",
    "simple_term_menu.*",
    "tomllib",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "whisper_dic.compat._windows"
ignore_errors = true
